[project]
name = "tensorrt-llm"
version = "0.1.0"
description = ""
authors = [
    {name = "TensorRT LLM [90828364+tensorrt-cicd@users.noreply.github.com]"}
]
license = "Apache-2.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "accelerate (>=1.7.0)",
    "build (>=1.5.0,<2.0.0)",
    "colored (>=2.3.2,<3.0.0)",
    "cuda-python (>=13)",
    "diffusers (>=0.37.1)",
    "ftfy (>=6.3.1,<7.0.0)",
    "lark (>=1.3.1,<2.0.0)",
    "lazy-loader (>=0.5,<1.0)",
    "mpi4py (>=4.1.2,<5.0.0)",
    "numpy (>=2.0.0,<2.4)",
    "onnx (>=1.21.0)",
    "onnx-graphsurgeon (>=0.5.2)",
    "graphviz (>=0.21,<0.22)",
    "openai (>=2.44.0,<3.0.0)",
    "polygraphy (>=0.50.3,<0.51.0)",
    "psutil (>=7.2.2,<8.0.0)",
    "nvidia-ml-py (>=13)",
    "pulp (>=3.3.2,<4.0.0)",
    "h5py (==3.12.1)",
    "strenum (>=0.4.15,<0.5.0)",
    "sentencepiece (>=0.1.99)",
    "tensorrt (>=10.16.1,<10.17.0)",
    "torch (>=2.11.0,<=2.12.0a0)",
    "nvidia-modelopt[torch] (>=0.37.0,<0.38.0)",
    "nvidia-nccl-cu13 (>=2.28.9,<=2.29.7)",
    "transformers (==5.5.4)",
    "prometheus-client (>=0.25.0,<0.26.0)",
    "prometheus-fastapi-instrumentator (>=8.0.2,<9.0.0)",
    "pydantic (>=2.9.1)",
    "pydantic-settings[yaml] (>=2.14.2,<3.0.0)",
    "omegaconf (>=2.3.1,<3.0.0)",
    "pillow (>=12.3.0,<13.0.0)",
    "optimum (>=2.2.0,<3.0.0)",
    "datasets (==3.1.0)",
    "evaluate (>=0.4.6,<0.5.0)",
    "mpmath (>=1.3.0)",
    "click (>=8.3.1,<8.4)",
    "click-option-group (>=0.5.9,<0.6.0)",
    "aenum (>=3.1.17,<4.0.0)",
    "pyzmq (>=27.1.0,<28.0.0)",
    "starlette (>=0.49.1)",
    "uvicorn (>=0.50.2,<0.51.0)",
    "setuptools (<80)",
    "ordered-set (>=4.1.0,<5.0.0)",
    "peft (>=0.18.1,<0.19.0)",
    "patchelf (>=0.17.2.4,<0.18.0.0)",
    "einops (>=0.8.2,<0.9.0)",
    "flashinfer-python (==0.6.14)",
    "opencv-python-headless (>=5.0.0.93,<6.0.0.0)",
    "xgrammar (==0.1.32)",
    "llguidance (==0.7.29)",
    "jsonschema (>=4.26.0,<5.0.0)",
    "backoff (>=2.2.1,<3.0.0)",
    "nvtx (>=0.2.15,<0.3.0)",
    "meson (>=1.11.1,<2.0.0)",
    "ninja (>=1.13.0,<2.0.0)",
    "blake3 (>=1.0.9,<2.0.0)",
    "soundfile (>=0.14.0,<0.15.0)",
    "triton (==3.6.0)",
    "xdsl (>=0.59.0)",
    "tiktoken (>=0.13.0,<0.14.0)",
    "blobfile (>=3.2.0,<4.0.0)",
    "openai-harmony (==0.0.4)",
    "nvidia-cutlass-dsl[cu13] (==4.5.0)",
    "plotly (>=6.8.0,<7.0.0)",
    "numexpr (>=2.14.1,<3.0.0)",
    "partial-json-parser (>=0.2.1.1.post7,<0.3.0.0)",
    "mcp (>=1.28.1,<2.0.0)",
    "torch-c-dlpack-ext (==0.1.3)",
    "flash-attn-4 (==4.0.0b11)",
    "mistral-common (>=1.10.0)",
    "torchao (>=0.14.1,<0.16.0)",
    "cuda-core (>=1.0.1,<2.0.0)",
    "cuda-tile (>=1.0.1)",
    "nvidia-cuda-tileiras (>=13.1,<13.2)",
    "etcd-sdk-python (==0.0.7)",
    "python-multipart (>=0.0.32,<0.0.33)",
    "smg-grpc-proto (>=0.4.2)",
    "cache-dit (>=1.3.5)",
    "librosa (>=0.11.0,<0.12.0)",
    "msgpack (>=1.2.1,<2.0.0)",
    "uvloop (>=0.19.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
